@startuml

class Empresa{
    -int id
    String nomeSocial
    String nomeFantasia
    String cnpj
    Endereco endereco
    Data dataCadastro 
    String socioPF
    String socioPJ 

   
}

abstract Socio{
    int id
    Endereco endereco
   
}

Empresa o--"1" Socio : contém


class Endereco {
    int id
    String estado
    String municipio
    String bairro
    String logradouro
    int numero
    String complemento
    String CEP
}
Empresa o-- Endereco : contém
Socio o-- Endereco: contém

class PessoaFisica extends Socio{
    String nome
    String cpf
   
}

class PessoaJuridica extends Socio{
    String nomeSocial
    String nomeFantasia
    String cnpj
    
}

class Validador{
    bool validarCNPJ()
    bool validarCPF()
}

class APIProviderEmpresas{
    +List<Empresa> _empresasCadastradas

    bool cadastrarEmpresa(Empresa empresa)
    bool removerEmpresa(String id)
    +List<Empresa> listaEmpresas()



}

class RepositoryEmpresas{
    +APIProviderEmpresas _apiProvider

    +bool cadastrarEmpresa(Empresa empresa)
    +bool removerEmpresa(String id)
    +List<Empresa> listaEmpresas()
}

RepositoryEmpresas  o--"1" APIProviderEmpresas : contém

@enduml